Closed
Bug 296337
Opened 20 years ago
Closed 20 years ago
scrollbars missing from print preview
Categories
(Core :: Print Preview, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: ajschult784, Assigned: roc)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
6.74 KB,
patch
|
bzbarsky
:
review+
bzbarsky
:
superreview+
shaver
:
approval1.8b3+
|
Details | Diff | Splinter Review |
Scrollbars are missing from print preview in linux suite trunk 2005060102 (and
also firefox trunk CVS) even when they're needed. This seems to happen on any
page. This regressed between linux trunk 2005051501 and 2005051603 indicating
the culprit is bug 293453.
| Reporter | ||
Updated•20 years ago
|
Flags: blocking1.8b3?
See Suite bug 291497 for some earlier scrollbar problems.
Comment 2•20 years ago
|
||
Also missing on Windows in 20050522
| Assignee | ||
Comment 3•20 years ago
|
||
The bug is that our hack sets the NS_FRAME_OUTSIDE_CHILDREN flag on the page
sequence frame, and the page sequence frame isn't setting its overflow area nor
clearing the flag during reflow, so the code in nsHTMLScrollFrame that sets the
corrrect mOverflowArea for its child doesn't run. This fix just unconditionally
unions the frame bounds into the overflow area.
I also realized that I wasn't paying attention in your recent patch to
introduce OuterFrameIsRoot ... this is already available in the mIsRoot flag in
nsGfxScrollFrameInner.
| Assignee | ||
Updated•20 years ago
|
Attachment #185254 -
Flags: superreview?(bzbarsky)
Attachment #185254 -
Flags: review?(bzbarsky)
Updated•20 years ago
|
Attachment #185254 -
Flags: superreview?(bzbarsky)
Attachment #185254 -
Flags: superreview+
Attachment #185254 -
Flags: review?(bzbarsky)
Attachment #185254 -
Flags: review+
| Assignee | ||
Comment 4•20 years ago
|
||
Comment on attachment 185254 [details] [diff] [review]
fix
simple fix for a rather bad UI regression
Attachment #185254 -
Flags: approval1.8b3?
Comment 5•20 years ago
|
||
Comment on attachment 185254 [details] [diff] [review]
fix
a=shaver
Attachment #185254 -
Flags: approval1.8b3? → approval1.8b3+
| Assignee | ||
Comment 6•20 years ago
|
||
checked in
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•20 years ago
|
Flags: blocking1.8b3?
You need to log in
before you can comment on or make changes to this bug.
Description
•