Bug 296337. Always correct the overflow area even if NS_FRAME_OUTSIDE_CHILDREN is set. r+sr=bzbarsky,a=shaver